--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -532,6 +532,9 @@
                                                         <div class="user-scope">
                                                             <span data-col="name"
                                                                   class="user-name">{{ u|best_name }}</span>
+                                                            {% if u.pk == current_user.pk %}
+                                                                <span class="text-muted">(You)</span>
+                                                            {% endif %}
                                                             <br>
                                                             <span data-col="user-name"
                                                                   class="user-username-content">{{ u.username }}</span>
@@ -570,7 +573,7 @@
                                                                                 edit</a>
                                                                         </form>
                                                                     </li>
-                                                                    <li class="active" data-access-type="Is owner">
+                                                                    <li class="active {% if not can_change_resource_flags %}disabled{% endif %}" data-access-type="Is owner">
                                                                         <form id="share-owner-{{ u.pk }}"
                                                                               class="share-form-owner"
                                                                               data-access-type="Is owner"
@@ -603,8 +606,10 @@
                                                 <tr id="row-id-{{ u.pk }}">
                                                     <td>
                                                         <div class="user-scope">
-                                                                    <span value="{{ u.pk }}"
-                                                                          class="user-name">{{ u|best_name }}</span>
+                                                            <span value="{{ u.pk }}" class="user-name">{{ u|best_name }}</span>
+                                                            {% if u.pk == current_user.pk %}
+                                                                <span class="text-muted">(You)</span>
+                                                            {% endif %}
                                                             <br>
                                                             <span class="user-username-content">{{ u.username }}</span>
                                                         </div>
@@ -635,7 +640,7 @@
                                                                             <a onclick="change_share_permission_ajax_submit('share-edit-{{ u.pk }}')">Can edit</a>
                                                                         </form>
                                                                     </li>
-                                                                    <li data-access-type="Is owner">
+                                                                    <li data-access-type="Is owner" {% if not can_change_resource_flags %}class="disabled"{% endif %}>
                                                                         <form id="share-owner-{{ u.pk }}" class="share-form-owner" data-access-type="Is owner"
                                                                               action="/hsapi/_internal/{{ cm.short_id }}/share-resource-with-user/owner/{{ u.pk }}/"
                                                                               method="POST">
@@ -663,8 +668,10 @@
                                                 <tr id="row-id-{{ u.pk }}">
                                                     <td>
                                                         <div class="user-scope">
-                                                                    <span value="{{ u.pk }}"
-                                                                          class="user-name">{{ u|best_name }}</span>
+                                                            <span value="{{ u.pk }}" class="user-name">{{ u|best_name }}</span>
+                                                            {% if u.pk == current_user.pk %}
+                                                                <span class="text-muted">(You)</span>
+                                                            {% endif %}
                                                             <br>
                                                             <span class="user-username-content">{{ u.username }}</span>
                                                         </div>
@@ -695,7 +702,7 @@
                                                                             <a onclick="change_share_permission_ajax_submit('share-edit-{{ u.pk }}')">Can edit</a>
                                                                         </form>
                                                                     </li>
-                                                                    <li data-access-type="Is owner">
+                                                                    <li data-access-type="Is owner" {% if not can_change_resource_flags %}class="disabled"{% endif %}>
                                                                         <form id="share-owner-{{ u.pk }}" class="share-form-owner" data-access-type="Is owner"
                                                                               action="/hsapi/_internal/{{ cm.short_id }}/share-resource-with-user/owner/{{ u.pk }}/"
                                                                               method="POST">
@@ -759,7 +766,7 @@
                                 </div>
 
                                 <div class="modal-footer">
-                                    <a type="button" data-dismiss="modal" class="btn btn-primary">Done</a>
+                                    <a type="button" data-dismiss="modal" class="btn btn-primary">Close</a>
                                 </div>
                             </div>
                         </div>
@@ -2572,9 +2579,14 @@
                     dataType: 'html',
                     data: datastring,
                     success: function (result) {
-                        $form.parent().closest("tr").fadeOut("normal", function() {
+                        $form.parent().closest("tr").fadeOut("normal", function () {
                             $(this).remove();
+                            if ($(".access-table li.active[data-access-type='Is owner']").length == 1) {
+                                $(".access-table li.active[data-access-type='Is owner']").closest("tr").addClass("hide-actions");
+                            }
                         });
+
+
                     },
                     error: function (XMLHttpRequest, textStatus, errorThrown) {
                         console.log("Error!");
