--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -1041,16 +1041,60 @@ a[data-toggle='tab']{
     white-space: nowrap;
 }
 
-#btn-public.active{
-    color:#FFF;
+#btn-public.active {
+    color: #FFF;
     background: #5cb85c;
     border-color: #20833F;
 }
 
-#btn-private.active{
-    color:#FFF;
-    background:#d9534f;
+#btn-private.active {
+    color: #FFF;
+    background: #d9534f;
     border-color: #8C3C3A;
+}
+
+#btn-discoverable.active {
+    color: #FFF;
+    background: #f0ad4e;
+    border-color: #CB7904;
+}
+
+#btn-private {
+    -webkit-border-radius: 0;
+    -webkit-border-top-right-radius: 4px;
+    -webkit-border-bottom-right-radius: 4px;
+    -moz-border-radius: 0;
+    -moz-border-radius-topright: 4px;
+    -moz-border-radius-bottomright: 4px;
+    border-radius: 0;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+
+#btn-discoverable {
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    border-radius: 0;
+    margin: 0 -1px;
+}
+
+#btn-public {
+    -webkit-border-radius: 4px;
+    -webkit-border-top-right-radius: 0;
+    -webkit-border-bottom-right-radius: 0;
+    -moz-border-radius: 4px;
+    -moz-border-radius-topright: 0;
+    -moz-border-radius-bottomright: 0;
+    border-radius: 4px;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+}
+
+
+
+#status-btn-group {
+    margin-left: 10px;
+    top: -5px;
 }
 
 .btn-success {
@@ -1063,43 +1107,24 @@ a[data-toggle='tab']{
 
 .btn{
     box-shadow: 0 1px 0 rgba(255,255,255,0.3) inset;
-    /*0 1px 1px rgba(100,100,100,0.3);*/
 }
 
-#id_user-wrapper {
-    width: calc(100% - 98px);
-    padding: 1px;
-    border: 1px solid #CCC;
-    height: 60px;
-    margin-top: 1px;
-    margin-left: -1px;
-    -webkit-border-radius: 3px;
-    -webkit-border-top-left-radius: 0;
-    -webkit-border-bottom-left-radius: 0;
-    -moz-border-radius: 3px;
-    -moz-border-radius-topleft: 0;
-    -moz-border-radius-bottomleft: 0;
-    border-radius: 3px;
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
+#id_user-wrapper{
+	width: 60%;
+	padding: 1px;
+	border: 1px solid #CCC;
+	height: 34px;
+	float: left;
+	-webkit-border-radius: 3px;
+	-webkit-border-top-left-radius: 0;
+	-webkit-border-bottom-left-radius: 0;
+	-moz-border-radius: 3px;
+	-moz-border-radius-topleft: 0;
+	-moz-border-radius-bottomleft: 0;
+	border-radius: 0;
+	border-top-left-radius: 0;
+	border-bottom-left-radius: 0;
 }
-
-/*#id_user-wrapper{*/
-	/*width: 60%;*/
-	/*padding: 1px;*/
-	/*border: 1px solid #CCC;*/
-	/*height: 34px;*/
-	/*float: left;*/
-	/*-webkit-border-radius: 3px;*/
-	/*-webkit-border-top-left-radius: 0;*/
-	/*-webkit-border-bottom-left-radius: 0;*/
-	/*-moz-border-radius: 3px;*/
-	/*-moz-border-radius-topleft: 0;*/
-	/*-moz-border-radius-bottomleft: 0;*/
-	/*border-radius: 0;*/
-	/*border-top-left-radius: 0;*/
-	/*border-bottom-left-radius: 0;*/
-/*}*/
 
 #permission-panel #id_user-autocomplete {
     width: 100%;
@@ -1109,7 +1134,7 @@ a[data-toggle='tab']{
 }
 
 #permission-panel .panel-body{
-    padding: 15px 0px;
+    padding: 15px 0;
 }
 
 span.hilight {
@@ -1291,25 +1316,25 @@ body > .container{
     top: 60px;
 }
 
-.cc-image{
-    width:88px;
-    height:31px;
+.cc-image {
+	width: 88px;
+	height: 31px;
 }
 
-#permission-panel{
-    margin-top:20px;
+#permission-panel {
+	margin: 30px 0;
 }
 
-#permission-panel .custom-well{
-    background: #F7F7F7;
-    margin-top: 30px;
+#permission-panel .custom-well {
+	background: #F7F7F7;
+	margin-top: 30px;
 }
 
-.info-icon{
-    color: #FFFFFF;
-    margin-top: 4px;
-    margin-left: -4px;
-    position: absolute;
+.info-icon {
+	color: #FFFFFF;
+	margin-top: 4px;
+	margin-left: -4px;
+	position: absolute;
     right: 25px;
     top: 13px;
 }
@@ -1340,19 +1365,7 @@ body > .container{
 	margin: 0 2px;
 }
 
-/*.btn-add-access {*/
-    /*-webkit-border-radius: 0px;*/
-    /*-webkit-border-top-left-radius: 3px;*/
-    /*-webkit-border-bottom-left-radius: 3px;*/
-    /*-moz-border-radius: 0px;*/
-    /*-moz-border-radius-topleft: 3px;*/
-    /*-moz-border-radius-bottomleft: 3px;*/
-    /*border-radius: 0px;*/
-    /*border-top-left-radius: 3px;*/
-    /*border-bottom-left-radius: 3px;*/
-    /*height: 60px;*/
-/*}*/
-.btn-add-access:focus {
+.btn-add-access:focus,#btn-discoverable:focus, #btn-public:focus, #btn-private:focus {
 	outline: none;
 }
 
@@ -1453,6 +1466,7 @@ body > .container{
 
 div#sharing-status {
     height: 34px;
+	margin: 20px 0;
 }
 
 .info-group {
