--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -746,7 +746,7 @@
                                 </div>
 
                                 <div class="modal-body">
-                                    <div >
+                                    <div id="div-invite-people">
                                         <p>Invite people:</p>
 
                                         <div class="input-group" style="width:100%">
@@ -767,9 +767,9 @@
 
                                                     <ul id="list-roles" class="dropdown-menu"
                                                         aria-labelledby="roles_list">
-                                                        <li><a data-role="view" href="#">Can view</a></li>
-                                                        <li><a data-role="edit" href="#">Can edit</a></li>
-                                                        <li><a data-role="owner" href="#">Is owner</a></li>
+                                                        <li><a data-role="view">Can view</a></li>
+                                                        <li><a data-role="edit">Can edit</a></li>
+                                                        <li><a data-role="owner">Is owner</a></li>
                                                     </ul>
                                                 </div>
 
@@ -2521,22 +2521,29 @@
                     dataType: 'html',
                     data: datastring,
                     success: function (result) {
-                        $form.parent().closest(".user-roles").find(".dropdown-toggle").text($form.attr("data-access-type"));
-                        $form.parent().closest(".user-roles").find(".dropdown-toggle").append(" <span class='caret'></span>");
-                        $form.parent().closest(".user-roles").find("li").removeClass("active");
-                        $form.parent().closest(".user-roles").find("li").removeClass("loading");
-                        $form.parent().closest(".user-roles").find("li[data-access-type='" + $form.attr("data-access-type") + "']").addClass("active");
-                        $(".role-dropdown").removeClass("open");
-                        // If an owner was added, enable dropdown menu and the remove icon for other owner entries
-                        if ($form.attr("data-access-type") == "Is owner") {
-                            $(".access-table li.active[data-access-type='Is owner']").closest("tr").removeClass("hide-actions");
+                        $("#div-invite-people").find(".label-danger").remove(); // Remove previous alerts
+                        json_response = JSON.parse(result);
+
+                        if (json_response.status == "success") {
+                            $form.parent().closest(".user-roles").find(".dropdown-toggle").text($form.attr("data-access-type"));
+                            $form.parent().closest(".user-roles").find(".dropdown-toggle").append(" <span class='caret'></span>");
+                            $form.parent().closest(".user-roles").find("li").removeClass("active");
+                            $form.parent().closest(".user-roles").find("li").removeClass("loading");
+                            $form.parent().closest(".user-roles").find("li[data-access-type='" + $form.attr("data-access-type") + "']").addClass("active");
+                            $(".role-dropdown").removeClass("open");
+                            // If an owner was added, enable dropdown menu and the remove icon for other owner entries
+                            if ($form.attr("data-access-type") == "Is owner") {
+                                $(".access-table li.active[data-access-type='Is owner']").closest("tr").removeClass("hide-actions");
+                            }
+
+                            if ($(".access-table li.active[data-access-type='Is owner']").length == 1) {
+                                $(".access-table li.active[data-access-type='Is owner']").closest("tr").addClass("hide-actions");
+                            }
                         }
-                        if ($(".access-table li.active[data-access-type='Is owner']").length == 1) {
-                            $(".access-table li.active[data-access-type='Is owner']").closest("tr").addClass("hide-actions");
+                        else if (json_response.status == "error") {
+                            $("#div-invite-people").append("<span class='label label-danger'><strong>Error: </strong>" + json_response.error_msg + "</span>");
+                            $form.parent().closest(".user-roles").find("li[data-access-type='" + $form.attr("data-access-type") + "']").removeClass("loading");
                         }
-                    },
-                    error: function (XMLHttpRequest, textStatus, errorThrown) {
-                        console.log("Error!")
                     }
                 });
             }
@@ -2554,64 +2561,70 @@
                     dataType: 'html',
                     data: datastring,
                     success: function (result) {
-                        $("#btn-invite").removeClass("loading");
-                        $(".access-table #row-id-" + share_with).remove(); // Remove previous entry if it exists
-                        $(".hilight > span").click(); // Clears the search field
+                        $("#div-invite-people").find(".label-danger").remove(); // Remove previous alerts
                         json_response = JSON.parse(result);
-                        // Get a copy of the user row template
-                        var rowTemplate = $("#templateRow").clone();
-                        // Form actions
-                        var unshareUrl = $form.attr('action').replace("share-resource-with-user", "unshare-resource-with-user") + share_with + "/";
-                        var viewUrl = $form.attr('action') + "view" + "/" + share_with + "/";
-                        var changeUrl = $form.attr('action') + "edit" + "/" + share_with + "/";
-                        var ownerUrl = $form.attr('action') + "owner" + "/" + share_with + "/";
-                        rowTemplate.find(".remove-user-form").attr('action', unshareUrl);
-                        rowTemplate.find(".remove-user-form").attr('id', 'form-remove-user-' + share_with);
-                        rowTemplate.find(".remove-user-form .btn-remove-row").attr("onclick", "unshare_resource_ajax_submit('form-remove-user-" + share_with + "')")
-                        // Set form urls, ids, and onclick methods
-                        rowTemplate.find(".share-form-view").attr('action', viewUrl);
-                        rowTemplate.find(".share-form-view").attr("id", "share-view-" + share_with);
-                        rowTemplate.find(".share-form-view").attr("data-access-type", "Can view");
-                        rowTemplate.find(".share-form-view a").attr("onclick", "change_share_permission_ajax_submit('share-view-" + share_with + "')");
-                        rowTemplate.find(".share-form-edit").attr('action', changeUrl);
-                        rowTemplate.find(".share-form-edit").attr("id", "share-edit-" + share_with);
-                        rowTemplate.find(".share-form-edit").attr("data-access-type", "Can edit");
-                        rowTemplate.find(".share-form-edit a").attr("onclick", "change_share_permission_ajax_submit('share-edit-" + share_with + "')");
-                        rowTemplate.find(".share-form-owner").attr('action', ownerUrl);
-                        rowTemplate.find(".share-form-owner").attr("id", "share-owner-" + share_with);
-                        rowTemplate.find(".share-form-owner").attr("data-access-type", "Is owner");
-                        rowTemplate.find(".share-form-owner a").attr("onclick", "change_share_permission_ajax_submit('share-owner-" + share_with + "')");
-                        rowTemplate.find("span[data-col='name'").text(json_response.name);
-                        rowTemplate.find("span[data-col='user-name'").text(json_response.username);
+                        if (json_response.status == "success") {
+                            $("#btn-invite").removeClass("loading");
+                            $(".access-table #row-id-" + share_with).remove(); // Remove previous entry if it exists
+                            $(".hilight > span").click(); // Clears the search field
 
-                        if (json_response.profile_pic != "No picture provided"){
-                            rowTemplate.find(".profile-pic-thumbnail").attr("style", "background-image: url('" + json_response.profile_pic + "')");
-                            rowTemplate.find(".profile-pic-thumbnail").removeClass("user-icon");
+                            // Get a copy of the user row template
+                            var rowTemplate = $("#templateRow").clone();
+                            // Form actions
+                            var unshareUrl = $form.attr('action').replace("share-resource-with-user", "unshare-resource-with-user") + share_with + "/";
+                            var viewUrl = $form.attr('action') + "view" + "/" + share_with + "/";
+                            var changeUrl = $form.attr('action') + "edit" + "/" + share_with + "/";
+                            var ownerUrl = $form.attr('action') + "owner" + "/" + share_with + "/";
+                            rowTemplate.find(".remove-user-form").attr('action', unshareUrl);
+                            rowTemplate.find(".remove-user-form").attr('id', 'form-remove-user-' + share_with);
+                            rowTemplate.find(".remove-user-form .btn-remove-row").attr("onclick", "unshare_resource_ajax_submit('form-remove-user-" + share_with + "')")
+                            // Set form urls, ids, and onclick methods
+                            rowTemplate.find(".share-form-view").attr('action', viewUrl);
+                            rowTemplate.find(".share-form-view").attr("id", "share-view-" + share_with);
+                            rowTemplate.find(".share-form-view").attr("data-access-type", "Can view");
+                            rowTemplate.find(".share-form-view a").attr("onclick", "change_share_permission_ajax_submit('share-view-" + share_with + "')");
+                            rowTemplate.find(".share-form-edit").attr('action', changeUrl);
+                            rowTemplate.find(".share-form-edit").attr("id", "share-edit-" + share_with);
+                            rowTemplate.find(".share-form-edit").attr("data-access-type", "Can edit");
+                            rowTemplate.find(".share-form-edit a").attr("onclick", "change_share_permission_ajax_submit('share-edit-" + share_with + "')");
+                            rowTemplate.find(".share-form-owner").attr('action', ownerUrl);
+                            rowTemplate.find(".share-form-owner").attr("id", "share-owner-" + share_with);
+                            rowTemplate.find(".share-form-owner").attr("data-access-type", "Is owner");
+                            rowTemplate.find(".share-form-owner a").attr("onclick", "change_share_permission_ajax_submit('share-owner-" + share_with + "')");
+                            rowTemplate.find("span[data-col='name'").text(json_response.name);
+                            rowTemplate.find("span[data-col='user-name'").text(json_response.username);
+
+                            if (json_response.profile_pic != "No picture provided") {
+                                rowTemplate.find(".profile-pic-thumbnail").attr("style", "background-image: url('" + json_response.profile_pic + "')");
+                                rowTemplate.find(".profile-pic-thumbnail").removeClass("user-icon");
+                            }
+
+                            if (access_type == "view") {
+                                rowTemplate.find("span[data-col='current-access'").text("Can view");
+                                rowTemplate.find("span[data-col='current-access'").append(" <span class='caret'></span>");
+                                rowTemplate.find(".share-form-view").parent().addClass("active");
+                            }
+                            else if (access_type == "edit") {
+                                rowTemplate.find("span[data-col='current-access'").text("Can edit");
+                                rowTemplate.find("span[data-col='current-access'").append(" <span class='caret'></span>");
+                                rowTemplate.find(".share-form-edit").parent().addClass("active");
+                            }
+                            else if (access_type == "owner") {
+                                rowTemplate.find("span[data-col='current-access'").text("Is owner");
+                                rowTemplate.find("span[data-col='current-access'").append(" <span class='caret'></span>");
+                                rowTemplate.find(".share-form-owner").parent().addClass("active");
+                                // Enable dropdown menu for other owner entries
+                                $(".access-table li.active[data-access-type='Is owner']").closest("tr").removeClass("hide-actions");
+                            }
+                            $(".access-table tbody").append($("<tr id='row-id-" + share_with + "'>" + rowTemplate.html() + "</tr>").hide().fadeIn(1000));
+                        }
+                        else if (json_response.status == "error") {
+                            $("#div-invite-people").append("<span class='label label-danger'><strong>Error: </strong>" + json_response.error_msg + "</span>");
                         }
 
-                        if (access_type == "view") {
-                            rowTemplate.find("span[data-col='current-access'").text("Can view");
-                            rowTemplate.find("span[data-col='current-access'").append(" <span class='caret'></span>");
-                            rowTemplate.find(".share-form-view").parent().addClass("active");
-                        }
-                        else if (access_type == "edit") {
-                            rowTemplate.find("span[data-col='current-access'").text("Can edit");
-                            rowTemplate.find("span[data-col='current-access'").append(" <span class='caret'></span>");
-                            rowTemplate.find(".share-form-edit").parent().addClass("active");
-                        }
-                        else if (access_type == "owner") {
-                            rowTemplate.find("span[data-col='current-access'").text("Is owner");
-                            rowTemplate.find("span[data-col='current-access'").append(" <span class='caret'></span>");
-                            rowTemplate.find(".share-form-owner").parent().addClass("active");
-                            // Enable dropdown menu for other owner entries
-                            $(".access-table li.active[data-access-type='Is owner']").closest("tr").removeClass("hide-actions");
-                        }
-                        $(".access-table tbody").append($("<tr id='row-id-" + share_with + "'>" + rowTemplate.html() + "</tr>").hide().fadeIn(1000));
-                    },
-                    error: function (XMLHttpRequest, textStatus, errorThrown) {
-                        console.log("Error!")
                         $("#btn-invite").removeClass("loading");
                     }
+
                 });
                 //don't submit the form
                 return false;
@@ -2673,12 +2686,12 @@
                 <button type="button" class="close" data-dismiss="alert">x</button> \
                 <strong>Success! </strong> \
                 Metadata updated.\
-            </div>'
+            </div>';
                 $alert_error = '<div class="alert alert-danger" id="error-alert"> \
                 <button type="button" class="close" data-dismiss="alert">x</button> \
                 <strong>Error! </strong> \
                 Metadata failed to update.\
-            </div>'
+            </div>';
                 $form = $('#' + form_id);
                 var datastring = $form.serialize();
                 $.ajax({
@@ -2795,6 +2808,7 @@
                 });
 
                 $("#list-roles a").click(onRoleSelect);
+                $("#id_user-autocomplete").attr("placeholder", "Search by name or username")
 
                 // hide add file button if necessary
                 var file_count = $("#file-count").attr('value');
