--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -2496,10 +2496,10 @@
                     success: function (result) {
                         $form.parent().closest("tr").fadeOut("normal", function () {
                             $(this).remove();
-                            if ($(".access-table li.active[data-access-type='Is owner']").length == 1) {
-                                $(".access-table li.active[data-access-type='Is owner']").closest("tr").addClass("hide-actions");
-                            }
                         });
+                        if ($(".access-table li.active[data-access-type='Is owner']").length == 2) {
+                            $(".access-table li.active[data-access-type='Is owner']").closest("tr").addClass("hide-actions");
+                        }
                     },
                     error: function (XMLHttpRequest, textStatus, errorThrown) {
                         console.log("Error!");
@@ -2536,6 +2536,7 @@
                                 $(".access-table li.active[data-access-type='Is owner']").closest("tr").removeClass("hide-actions");
                             }
 
+                            // If only one owner listed, disable actions for that entry
                             if ($(".access-table li.active[data-access-type='Is owner']").length == 1) {
                                 $(".access-table li.active[data-access-type='Is owner']").closest("tr").addClass("hide-actions");
                             }
